--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -9,6 +9,18 @@
   padding-bottom: 100px;
 }
 
+@media (max-width: 768px) {
+  .main {
+    padding-bottom: 80px;
+  }
+}
+
+@media (max-width: 480px) {
+  .main {
+    padding-bottom: 70px;
+  }
+}
+
 /* Banned Screen */
 .bannedScreen {
   min-height: 100vh;
